fixed moveDown function in app.js
added an invisible line at the top of the gameboard

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,10 @@ p {
     /*justify-content: center;*/
 }
 
+.filler {
+    color: black;
+}
+
 .grid {
     width: 200px;
     height: 400px;
@@ -83,6 +87,7 @@ p {
 .mini-grid {
     /*margin-top: auto;
     margin-bottom: auto;*/
+    margin-top: 20px;
     margin-left: 50px;
     width: 80px;
     height: 80px;
